# polyglot

./: .gitignore  Cargo.toml  Readme.md  package-lock.json
.cargo/: config.toml
.devcontainer/: DOCKERFILE  devcontainer.json
.github/workflows/: publish.yml  pull_request.yml
PolyglotCSharp/: PolyglotCSharp.sln
PolyglotCSharp/PolyglotCSharp/: ExpressionEvaluator.cs  HashMap.cs  PolyglotCSharp.csproj
PolyglotCSharp/PolyglotCSharp.Tests/: ExpressionTests.cs  PolyglotCSharp.Tests.csproj
js-test-app/: package-lock.json  package.json
js-test-app/src/: App.js
polyglot/: Cargo.toml
polyglot.js/: index.js  package.json
polyglot/src/: lib.rs
polyglot_csharp/: Cargo.toml  build.rs  unify.toml
polyglot_csharp/src/: lib.rs  polyglot_csharp.udl
polyglot_js/: Cargo.toml  index.js  index.test.js  package-lock.json  package.json  webpack.config.cjs  webpack.config.mjs
polyglot_js/src/: lib.rs
polyglot_js_bindings/: babel.config.cjs  index.js  index.test.js  package.json
polyglot_js_bindings_tests/: index.js  index.test.js  jest.config.cjs  package-lock.json  package.json
