[package]
authors = ["Adam Grabski"]
description = "A cross-platform, cross-language interpreter of simple logical expressions"
edition = "2021"
license = "MIT"
name = "polyglot_interpreter"
readme = "../README.md"
repository = "https://github.com/Agrabski/polyglot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
