[package]
build = "build.rs"
edition = "2021"
name = "polyglot_csharp"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "polyglot_csharp"

[dependencies]
pileks_uniffi-bindgen-cs = "0.2.1"
polyglot_interpreter = {path = "../polyglot"}
uniffi = {version = "0.23.0", features = ["build"]}

[build-dependencies]
uniffi = {version = "0.23.0", features = ["build"]}
uniffi_bindgen = "0.23.0"
