[package]
author = "Adam Grabski"
description = "Cross language interpreter of simple logical expressions"
edition = "2021"
name = "polyglot_js"
publish = false
readme = "../Readme.md"
version = "1.3.3"
license = "MIT"
repository = "https://github.com/agrabski/polyglot"

[lib]
crate-type = ["cdylib"]
name = "polyglot_js"

[dependencies]
js-sys = "0.3.68"
polyglot_interpreter = { path = "../polyglot" }
wasm-bindgen = { version = "0.2.91" }
[profile.release]
lto = true
[build]
target = "wasm32-unknown-unknown"
[dev-dependencies]
wasm-bindgen-test = "0.3.0"

